--- a/app/src/main/res/layout/fruit_item.xml
+++ b/app/src/main/res/layout/fruit_item.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:layout_width="120dp"
+              android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
     <ImageView
             android:id="@+id/fruit_image_view"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_gravity="left"
+            android:layout_gravity="center"
             android:src="@drawable/apple"/>
 
     <TextView
             android:id="@+id/fruit_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
+            android:layout_gravity="center"
             android:text="苹果"
             android:textSize="30sp"/>
 
@@ -23,7 +23,7 @@
             android:id="@+id/fruit_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
+            android:layout_gravity="center"
             android:text="15元/kg"
             android:textSize="20sp"
             android:textColor="#FF0000"/>
